--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,16 @@
 #title{
-    background-color: gray;
-    color: white;
+    background-color: rgb(151, 147, 147);
+    color: black;
 }
 
+.title{
+    color: black;
+}
 h1{
     font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
+    font-size: 2rem;
     line-height: 1.5;
+    
 }
 
 .container-fluid{
@@ -22,6 +26,7 @@ body{
 
 .download-button{
     margin: 5% 3% 5% 0;
+    color: black;
 }
 
 /* Nav Bar */
@@ -29,9 +34,12 @@ body{
     font-family: 'Ubuntu';
     font-size: 2.5rem;
     font-weight: bold;
+    
+    
 }
 .navbar{
     padding: 0 0 3rem;
+   
 }
 
 .nav-item{
@@ -41,6 +49,7 @@ body{
 .nav-link{
     font-size: 1.2rem;
     font-family: 'Montserrat-light';
+    
 }
 
 /* Title Image */
@@ -73,7 +82,7 @@ body{
 .feature-img{
     font-size: 4rem;
     margin-bottom: 5%;
-    color: #ef8172;
+    color: gray;
 }
 
 .feature-img:hover{
@@ -91,10 +100,10 @@ body{
 /* Testimonials section */
 
 #testimonials{
-    background-color: #ef8172;
+    background-color: rgb(151, 147, 147);
     text-align: center;
     
-    color: white;
+    color: black;
 }
 
 .testimonial-image{
@@ -117,7 +126,7 @@ body{
 /* Press Section */
 
 #press{
-    background-color: #ef8172;
+    background-color: rgb(151, 147, 147);
     text-align: center;
     padding-bottom: 3%;
 }
@@ -127,31 +136,122 @@ body{
     margin: 20px 20px 50px;
 }
 
-/* Pricing Section */
-#pricing{
-    padding: 100px;
+/* Subscribe section */
+
+#subscribe{
     text-align: center;
+    padding-top: 5%;
 }
 
-.pricing-column{
-    padding: 3% 2%;
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
+  }
+  .form-signin .checkbox {
+    font-weight: 400;
+  }
+  .form-signin .btn {
+    margin-top: 36px;
+    margin-bottom: 45px;
+    background-color: black;
+    color: black;
+    border: none;
+    color: #fff
 }
+  .form-signin .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .form-signin .form-control:focus {
+    z-index: 2;
+  }
+  .top {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  
+  .middle{
+    border-radius: 0;
+    margin-bottom: -1px;
+  }
+  .bottom{
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
 
 /* Call to Action section */
 #cta{
 text-align: center;
-background-color: #ff4c68;
+background-color: rgb(151, 147, 147);
 padding: 10%;
-color: white;
+color: black;
 font-family: 'Montserrat';
 }
 
 #cta h3{
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 
 .cta-button{
     
+}
+
+/* team section */
+
+#team body {
+    background: linear-gradient(90deg, #BA68C8 0%, #AB47BC 100%)
+}
+
+.container {
+    background-color: rgb(224, 220, 220);
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, .2);
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+}
+
+.title {
+    font-size: 25px;
+    font-weight: 100
+}
+
+.icon {
+    position: relative;
+    bottom: 11px
+}
+
+.mt-100 {
+    margin-top: 100px
+}
+
+.profile img {
+    width: 68px;
+    height: 68px;
+    border-radius: 50%
+}
+
+.card {
+    border-radius: 15px;
+    margin-left: 30px;
+    margin-right: 30px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2)
+}
+
+.card-body {
+    position: relative;
+    bottom: 35px
+}
+
+.header {
+    padding-top: 40px
 }
 
 
@@ -161,6 +261,7 @@ font-family: 'Montserrat';
 #footer{
 text-align: center;
 padding: 3%;
+background-color: rgb(151, 147, 147);;
 }
 
 .footer-icon{
